--- a/MultipleTitleValidation/pom.xml
+++ b/MultipleTitleValidation/pom.xml
@@ -35,7 +35,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>core.App</mainClass>
+							<mainClass>core.Selenium</mainClass>
 						</manifest>
 					</archive>
 					<descriptorRefs>
